--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
 
 :root {
 	--colour-bg: #021014;
-	--colour-accent: #366570;
+	--colour-accent: #4897a8;
 	--colour-fg: white;
 	--transition-exp: cubic-bezier(0.16, 1, 0.3, 1);
 }
